<resources>
    <string name="app_name">AppListaAluno</string>
    <string name="txt_hint_edit_gasolina">Primeiro Nome</string>
    <string name="txt_hint_edit_etanol">Sobrenome</string>
    <string name="txt_hint_edit_matricula">Matricula</string>
    <string name="txt_hint_edit_cpf">CPF</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>