<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83888A"
    tools:context=".view.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_horizontal"
                android:text="Gasolina x Etanol"
                android:textSize="34sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="111dp"
                    android:layout_marginEnd="16dp"
                    android:ems="8"
                    android:hint="Gasolina"
                    android:inputType="numberDecimal"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="111dp"
                    android:layout_marginEnd="16dp"
                    android:ems="8"
                    android:hint="Etanol"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_Calcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="151dp"
                    android:layout_marginTop="39dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#5061C3"
                    android:text="calcular" />

                <TextView
                    android:id="@+id/textResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="39dp"
                    android:layout_marginEnd="139dp"
                    android:ems="10"
                    android:hint="resultado"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#5061C3"
                    android:text="@string/txt_button_limpar"/>

                <Button
                    android:id="@+id/btn_Salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="181dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#5061C3"
                    android:text="@string/txt_button_salvar" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_Finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="228dp"
                android:backgroundTint="#5061C3"
                android:text="@string/txt_button_finalizar" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>